# bideorai

./: .gitignore  README.md  deploy.py
backend/: .gitignore  Cargo.toml
backend/src/: main.rs
frontend/: .gitignore  README.md  controls.css  index.html  material_font.css
frontend/src/: Main.elm
pipeline/: .gitignore  nfo_to_json.py  post_process.py  video_to_mpd.py
