[package]
name = "backend"
version = "0.1.0"
authors = ["Stephen Molyneaux <WimbledonLabs@github.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
rocket_contrib = "0.4.2"
serde = "1.0.104"
serde_derive = "1.0.104"
json = "0.12.1"
regex = "1.3.4"
tempdir = "0.3.7"
percent-encoding = "2.1.0"
toml = "0.4.10"

[dev-dependencies]
pretty_assertions = "0.6.1"
